# effective-train

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
resources/: py_generate.py
src/: account.rs  data.rs  io_ops.rs  ledger.rs  main.rs
