[package]
name = "effective-train"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
csv-async = { version = "1.1", features = ["tokio", "with_serde"] }
rust_decimal = "1.25.0"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.19.2", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = "0.3.11"
